# ParallelSortingByRegularSampling

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
cmake/modules/: FindMatplotlib.cmake
doc/: plot.tar
include/psrs/: convert.h  generator.h  list.h  macro.h  psrs.h  ring.h  sort.h  stats.h  timing.h
src/: CMakeLists.txt  convert.c  generator.c  list.c  main.c  psrs.c  ring.c  sort.c  stats.c  timing.c
tools/: mpi_hosts  plot.py  prepare.sh
